tests/baselines/reference/strictModeReservedWordInModuleDeclaration.errors.txt
strictModeReservedWordInModuleDeclaration.ts(2,11): error TS1212: Identifier expected. 'public' is a reserved word in strict mode.
strictModeReservedWordInModuleDeclaration.ts(3,11): error TS1212: Identifier expected. 'private' is a reserved word in strict mode.
strictModeReservedWordInModuleDeclaration.ts(4,11): error TS1212: Identifier expected. 'public' is a reserved word in strict mode.
strictModeReservedWordInModuleDeclaration.ts(6,11): error TS1212: Identifier expected. 'private' is a reserved word in strict mode.
strictModeReservedWordInModuleDeclaration.ts(6,19): error TS1212: Identifier expected. 'public' is a reserved word in strict mode.


==== strictModeReservedWordInModuleDeclaration.ts (5 errors) ====
    "use strict"
    namespace public { }
              ~~~~~~
!!! error TS1212: Identifier expected. 'public' is a reserved word in strict mode.
    namespace private { }
              ~~~~~~~
!!! error TS1212: Identifier expected. 'private' is a reserved word in strict mode.
    namespace public.whatever {
              ~~~~~~
!!! error TS1212: Identifier expected. 'public' is a reserved word in strict mode.
    }
    namespace private.public.foo { }
              ~~~~~~~
!!! error TS1212: Identifier expected. 'private' is a reserved word in strict mode.
                      ~~~~~~
!!! error TS1212: Identifier expected. 'public' is a reserved word in strict mode.